<resources>
    <string name="app_name">iCoche</string>
    <string name="title_activity_board">board</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sett_alarma">Setting Alarm</string>
    <string name="label">Call Alarm</string>
    <string name="Only_phone_number">Only phone number</string>
    <string name="Medium_sensitivity">Medium sensitivity</string>
    <string name="High_sensitivity">High sensitivity</string>
    <string name="Warning">Warning</string>
    <string name="Text_notify">By default the alarm is configured for medium sensitivity and to sound from the application. If you want me to call you a number when it is activated, configure the option here.</string>
    <string name="OK">OK</string>
    <string name="guardar">SAVE</string>
    <string name="channel_name">name</string>
    <string name="channel_description">description</string>
    <string name="alert">Alert</string>
    <string name="revision">He has traveled many kilometers since the last time. Go for his mechanic</string>
    <string name="km">Insert only the distance for revision in km</string>
    <string name="distance">Distance to travel</string>
    <string name="loremp_ipsum_descripcion">Your on-board computer</string>
    <string name="radio">My Radio</string>
    <string name="reparame">Repair me</string>
    <string name="descripcion">\@Made by Juan Carlos Hernández Hernández</string>
    <string name="where">Where is my car?</string>
    <string name="icoche">My iCoche</string>
    <string name="dp_alarma">Set an alarm for your car from here. Make it ring or call you on the phone.</string>
    <string name="dp_radio">Have your playlist closer than ever. Your trip with good music.</string>
    <string name="dp_gps">Your routes closer to you.</string>
    <string name="dp_reparame">Let me help you with your mechanical checks.</string>
    <string name="dp_iGreen">Control your emissions. Let the green bloom.</string>
    <string name="dp_where">Check where we parked your car for the last time.</string>
    <string name="dp_iCoche">This is your inventory zone.</string>
    <string name="error">ERROR</string>
    <string name="mess_error">This function is not yet developed. We are sorry.</string>
    <string name="activar">ACTIVATE</string>
</resources>
