<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".setting_alarma">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchMaterial"
        android:layout_width="327dp"
        android:layout_height="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:checked="false"
        android:text="@string/sett_alarma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensibilidad_alta" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="238dp"
        android:layout_height="127dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchMaterial">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label"
            app:helperText="@string/Only_phone_number"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/colorAccent"
            app:startIconDrawable="@drawable/ic_call_24px">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sensibilidad_media"
        android:layout_width="327dp"
        android:layout_height="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:checked="true"
        android:text="@string/Medium_sensitivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sensibilidad_alta"
        android:layout_width="327dp"
        android:layout_height="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:checked="false"
        android:text="@string/High_sensitivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensibilidad_media" />

    <Button
        android:id="@+id/containedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="115dp"
        app:backgroundTint="@color/colorPrimary"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>